shitload of stuff

--- a/public/views/editUserInfo.html
+++ b/public/views/editUserInfo.html
@@ -1,5 +1,5 @@
 <md-content class="md-padding">
-    <md-tabs md-dynamic-height="" md-border-bottom="">
+    <md-tabs md-dynamic-height="" md-border-bottom="" md-selected="selectedIndex">
         <md-tab label="Personal Info"  md-dynamic-height md-border-bottom>
             <md-content class="md-padding">
                 <div class="left-margin col-lg-4 col-md-3 col-sm-1"></div>
