--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,13 @@
 .text-blue{
     color:dodgerblue;
 }
+.badge-notify{
+    background:red;
+    position:relative;
+    top: -10px;
+    left: -12px;
+    padding:1px 5px;
+}
 .angular-google-map-container,#googleMap{
     height: 400px;
     display: block;
