--- a/public/views/about.html
+++ b/public/views/about.html
@@ -1,24 +1,46 @@
 <div class="text-center">
     <h1>Joy'N'Ride</h1>
 
-    <div>this is the about page</div>
-    <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 "></div>
-    <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 ">
-        <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 jumbotron img-rounded">
-            box 1
+    <div  class="col-lg-12">
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 "></div>
+        <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 well text-left">
+            <p>
+                <b>joyNride</b> is a free crowd-sourcing service which allows you share future voyages by car<br/>
+                and save money while sharing the car with fellow travellers.<br/>
+                The payment is equally spent among all participants, and is set by the driver itself, <br/>
+                as well as the source and the destination of the voyage.<br/>
+            </p>
+
+            <p>
+                Search results are filtered according to parameters of price, source, destination and whether <br/>
+                or not the transaction has filled up with passengers. The source of a displayed transaction has to <br/>
+                be located near the supplied source within a radius specified by the driver, <br/>
+                whereas the destination itself has to be located near some selected points along the transaction
+                path,<br/>
+                within a radius specified by the driver.<br/>
+                <b>joyNride</b> encourages users to rate the transaction after taking part in it, and even rewards users
+                which tend <br/>
+                to rate by presenting multiple requests to a driver (by different users) in a specific order. to be
+                continued...
+            </p>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 "></div>
-        <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 jumbotron img-rounded">
-            box 2
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-0 col-lg-0 "></div>
-        <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 jumbotron img-rounded">
-            box 3
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 "></div>
-        <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 jumbotron img-rounded">
-            box 4
-        </div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 "></div>
     </div>
-    <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 "></div>
+    <div  class="col-lg-12">
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 "></div>
+        <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 text-center">
+            <br/><br/>
+            <h1>The Team</h1>
+            <br/><br/>
+            <div ng-repeat="person in members" class="col-lg-3">
+                <h1>{{person.name}}</h1>
+                <img ng-src="{{person.pic}}" style="width:150px; height: 150px; border-radius: 75px;">
+
+                <p>{{person.text}}</p>
+
+            </div>
+        </div>
+
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 "></div>
+    </div>
 </div>
