shit load of updates

--- a/public/views/editUserInfo.html
+++ b/public/views/editUserInfo.html
@@ -33,8 +33,9 @@
         <md-tab label="Updates"  md-dynamic-height md-border-bottom>
             <md-content class="md-padding">
                 <div class="left-margin col-lg-4 col-md-3 col-sm-1"></div>
-                <div class="container col-lg-4 col-md-6 col-sm-10">
-                    <h1>this will be a tab with all sort of updates and stuff</h1>
+                <div class="container col-lg-12 col-md-6 col-sm-10"
+                     ng-include="'../views/updates.html'"
+                     ng-controller="UpdatesController">
                 </div>
                 <div class="left-margin col-lg-4 col-md-3 col-sm-1"></div>
             </md-content>
