--- a/public/views/about.html
+++ b/public/views/about.html
@@ -32,9 +32,9 @@
             <br/><br/>
             <h1>The Team</h1>
             <br/><br/>
-            <div ng-repeat="person in members" class="col-lg-3 text-center">
+            <div ng-repeat="person in members" class="col-lg-3 text-center aboutUsProfile">
                 <h1>{{person.fname}}<br/>{{person.lname}}</h1>
-                <img ng-src="{{person.pic}}" style="width:150px; height: 150px; border-radius: 75px;">
+                <img ng-src="{{person.pic}}" style="">
                 <p>{{person.text}}</p>
 
             </div>
