--- a/public/css/style.css
+++ b/public/css/style.css
@@ -153,3 +153,10 @@ b{
     -webkit-filter: grayscale(0) !important;
     filter: grayscale(0);
 }
+.remove{
+    position: absolute;
+    right: 10px;
+    top: 5px;
+    font-size: 32px;
+    color: darkred;
+}
