--- a/public/views/myDrives.html
+++ b/public/views/myDrives.html
@@ -9,6 +9,7 @@
                 <span class="side-margin">from <u>{{value.source}}</u> To <u>{{value.dest}}</u></span>
                 <span class="side-margin">Status : <b
                         ng-class="value.status=='denied'?'text-red':(value.status=='approved'?'text-green':'text-blue')">{{value.status}}</b></span>
+                <span style="float:right" class="glyphicon glyphicon-remove remove" tooltip="cancel request"></span>
             </div>
             <div layout="row" layout-align="center left" ng-show="value.showInfo"
                  class="well top-margin  body col-lg-6 col-md-12">
@@ -44,6 +45,7 @@
                 <span class="side-margin">from <u>{{value.source}}</u> To <u>{{value.dest}}</u></span>
                 <span class="side-margin"><b> # of passengers : {{value.passengers.length}}</b></span>
                 <span class="side-margin"><b> (approved: {{getApprovedPassengers(value)}})</b></span>
+                <span style="float:right" class="glyphicon glyphicon-remove remove" tooltip="cancel drive"></span>
             </div>
             <div layout="row" layout-align="center left" ng-show="value.showInfo"
                  class="well top-margin body col-lg-6 col-md-12">
