--- a/public/views/tutorial.html
+++ b/public/views/tutorial.html
@@ -1,5 +1,5 @@
 <div class="text-center">
-    <h1>Joy'N'Ride</h1>
+    <h1>Joy'N'Ride 101</h1>
 
     <div class="col-lg-12">
         <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 "></div>
@@ -14,7 +14,8 @@
             </ul>
             </p>
             <p>
-<br/><br/>
+                <br/><br/>
+
             <h3>support questions</h3>
             <ul>
                 <li>
