--- a/public/views/rank.html
+++ b/public/views/rank.html
@@ -1,7 +1,6 @@
 <div class="text-center" style="margin-top:100px;">
-    <h1>rank</h1>
     <section class="top-margin" layout="row" layout-margin layout-padding layout-wrap
-             layout-align="space-around center">
+             layout-align="space-around center" ng-show="ridesToRank.length">
         <div ng-repeat="ride in ridesToRank|orderBy:['date','time','id'] " flex-gt-md="30" flex="66" class="well"
              layout="column">
             <div class="col-lg-12" flex>
@@ -40,6 +39,22 @@
         </div>
     </section>
 </div>
+<div class="text-center" ng-hide="ridesToRank.length">
+    <h1 style="font-width:bold; font-size:40px;">Your Awsome!</h1>
+
+    <div class="col-lg-12">
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 "></div>
+        <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 well text-left">
+            Oh, it seems you have ranked all your rides! <br/>
+            Go you! You make our world a much better place!
+        </div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 "></div>
+    </div>
+</div>
+
+
+
+
 
 <script type="text/ng-template" id="driverTemplate.html">
     <div class="text-center bottom-margin"><b>{{dynamicPopover.ride.info.source}}</b> <span
